syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

package rpcs;

option go_package = "github.com/gilwong00/go-notification-service/rpcs";

service UserService {
	rpc CreateUser(CreateUserRequest) returns(CreateUserResponse) {
		option (google.api.http) = {
			post: '/api/v1/user'
			body: '*'
		};
	};
	rpc AddFollower(AddFollowerRequest) returns(AddFollowerResponse) {
		option (google.api.http) = {
			post: '/api/v1/user/follower'
			body: '*'
		};
	};
	rpc DeleteUser(DeleteUserRequest) returns(DeleteUserResponse) {
		option (google.api.http) = {
			delete: '/api/v1/user/{id}'
		};
	};
}

message User {
	string id = 1;
	string username = 2;
	google.protobuf.Timestamp created_at = 3;
}

message CreateUserRequest {
	string username = 1;
}

message CreateUserResponse {
	User user = 1;
}

message DeleteUserRequest {
	string id = 1;
}

message DeleteUserResponse {}

message AddFollowerRequest {
	string user_id = 1;
	string follower_id = 2;
}

message AddFollowerResponse {}